Fixed troubles with /api, swagger 500 status